--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.13.4",
+    "feiertagejs": "^1.1.1",
     "jade": "~0.34.0",
     "mysql": "^2.0.0-alpha8",
     "orm": "^2.1.30"
